--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "polymer": "Polymer/polymer#^1.4.0",
     "iron-ajax": "PolymerElements/iron-ajax#^1.4.3",
     "iron-pages": "PolymerElements/iron-pages#^1.0.8",
-    "app-route": "PolymerElements/app-route#^0.9.3"
+    "app-route": "PolymerElements/app-route#^0.9.3",
+    "spinner-backdrop": "IngressoRapidoWebComponents/spinner-backdrop#^1.1.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
