--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/ViggyNash/ARWebsite#readme",
   "dependencies": {
+    "body-parser": "~1.16.0",
+    "bower": "^1.8.0",
     "express": "^4.14.1",
     "mongodb": "^2.2.22",
-    "body-parser": "~1.16.0"
+    "polymer-cli": "^0.17.0"
   },
   "devDependencies": {
     "nodemon": "~1.11.0"
